# demo_python_settings

./: README.md  config.yaml  main.py  pyproject.toml  views.py
scripts/: migrate.sh
